appId: com.kobe.fila

---

## --- A ideia é que cada teste seja independente, facilitando a execução isolada ---
- launchApp:
    clearState: true
     

## -- Assert de que esta na tela inicial do app ---
- assertVisible:
    id: "account"
    enabled: true

- tapOn:
    id: "account"

- assertVisible:
    id: "Entrar com e-mail"
    enabled: true

- tapOn:
    id: "Entrar com e-mail"

- tapOn:
    id: "Entrar com e-mail e senha"

## -- Roda os scripts com dados de cpf, email e telefone ---
- runScript: "../utils/Datas.js"
- runScript: "../pages/auth.js"

## -- Valida se esta na tela de login ---
- assertVisible: 
    text: "Entrar com e-mail"

- tapOn:
    id: "E-mail"
- inputText: "${output.login.email}"

- assertVisible:
    text: "${output.login.email}"
    enabled: true

- tapOn:
    id: "Senha"
- inputText: "${output.login.password}"

- tapOn:
    id: "Entrar"

- waitForAnimationToEnd:
    timeout: 10000   


## -- Valida se o login foi realizado com sucesso ---
- assertVisible:
    text: "Boas-vindas, Wiliam!"
